@@ -64,6 +64,9 @@ Fixed .Z80 and .ZSF screen previews when using 128k screen page 7
 Fixed .DSK extract 
 Fixed crash when saving .ZSF snapshots when a byte DD is found just before a byte is repeated more than 256 times
 
+Fixed ZX Vision:
+-Fixed showing cursor on edit fields and text length longer than visible
+
 
 Some other minor bugfixes and improvements
 
